# TensorRT-Deployment-Practices

./: .gitignore  CMakeLists.txt  CMakePresets.json
Cifar100CNN/: CMakeLists.txt
Cifar100CNN/src/: Cifar100CNN.cpp
YoloV8n/: CMakeLists.txt  test_yolo.cpp
YoloV8n/config/: config.yml
YoloV8n/include/: YoloV8n.h
YoloV8n/src/: YoloV8n.cpp
camera/: CMakeLists.txt
camera/config/: config.yml
camera/include/: camera.h
camera/src/: camera.cpp
main/: CMakeLists.txt  test_cifar100.cpp
main/include/: Cifar100CNN.h
main/src/: Cifar100CNN.cpp
trt_wrapper/: CMakeLists.txt
trt_wrapper/include/trt_wrapper/: Inference.h  ModelBuilder.h  Processor.h  common.h  logger.h
trt_wrapper/src/: ModelBuilder.cpp
